# TermOx

./: CMakeLists.txt  makefile
examples/: CMakeLists.txt  form.cpp  hello.cpp  panels.cpp  progress.cpp  tabs.cpp  tabs_on_right.cpp
include/ox/: notebook.hpp
src/: notebook.cpp
